# axon-pro

./: .gitignore  DOCS.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml
src/axon_pro/: __init__.py
src/axon_pro/cli/: main.py
src/axon_pro/config/: __init__.py  ignore.py  languages.py
src/axon_pro/core/: diff.py
src/axon_pro/core/embeddings/: embedder.py  text.py
src/axon_pro/core/graph/: graph.py  model.py
src/axon_pro/core/ingestion/: calls.py  community.py  coupling.py  dead_code.py  heritage.py  imports.py  laravel.py  parser_phase.py  pipeline.py  processes.py  structure.py  symbol_lookup.py  types.py  walker.py  watcher.py
src/axon_pro/core/parsers/: base.py  blade.py  csharp_lang.py  java_lang.py  php_lang.py  python_lang.py  typescript.py
src/axon_pro/core/search/: hybrid.py
src/axon_pro/core/storage/: base.py  kuzu_backend.py  neo4j_backend.py
src/axon_pro/mcp/: __init__.py  high_utility_tools.py  resources.py  server.py  tools.py
tests/cli/: test_main.py
tests/core/: test_calls.py  test_community.py  test_config.py  test_coupling.py  test_dead_code.py  test_diff.py  test_embedder.py  test_embedding_text.py  test_graph.py  test_graph_model.py  test_heritage.py  test_hybrid_search.py  test_imports.py  test_kuzu_backend.py  test_kuzu_search.py  test_parser_phase.py  test_parser_python.py  test_parser_typescript.py  test_pipeline.py  test_processes.py  test_storage_base.py  test_structure.py  test_types.py  test_walker.py  test_watcher.py
tests/e2e/: test_full_pipeline.py
tests/mcp/: test_tools.py
